early FF version: input box + submit button alignment fix

--- a/ligertailpy/src/frontend/css/submission.css
+++ b/ligertailpy/src/frontend/css/submission.css
@@ -38,8 +38,7 @@
 }
 
 #ligertail_submission_lightbox_button_pay {
-    float:right;
-    margin-right: 30px;
+    margin-left: 52px;
 }
 
 #ligertail_submission_lightbox .ligertail_widget_content {
